fix(netflix): Fix yellow colors to not cause text to be unreadable

--- a/app/scripts/modules/netflix/availability/availability.less
+++ b/app/scripts/modules/netflix/availability/availability.less
@@ -172,7 +172,7 @@
     background-color: @healthy_green_border !important;
   }
   .aggregate-score-2 {
-    background-color: @stage-failed_continue !important;
+    background-color: @unhealthy_yellow !important;
   }
   .aggregate-score-3 {
     background-color: @unhealthy_orange !important;
@@ -202,7 +202,7 @@
     color: @healthy_green_border;
   }
   .score-color-2 {
-    color: @stage-failed_continue;
+    color: @unhealthy_yellow;
   }
   .score-color-3 {
     color: @unhealthy_orange;
